syntax = "proto3";
option go_package = "3_CIBC_Controller_Interactors_Gateway/grpc_controller/GRPC"; // Tells where to put the generated code

message GRPCAccount {
	int64 User_id = 1;
	int64 Account_number = 2;
}

message GRPCUser {
	int64 Id = 1;
	string First_name = 2;
	string Last_name = 3;
	repeated GRPCAccount Accounts = 4;
}


message GetUsersRequest{

}

message GetUsersResponse{
    repeated GRPCUser user = 1;
}

message GetUserRequest{
    int64 id = 1;
}

message GetUserResponse{
    GRPCUser user = 1;
}

message CreateUserRequest{
    GRPCUser user = 1;
}

message CreateUserResponse{
    GRPCUser user = 1;
}

message DeleteUserRequest{
    int64 id = 1;
}

message DeleteUserResponse{
    GRPCUser user = 1;
}

message CreateAccountRequest{
    GRPCAccount account = 1;
}

message CreateAccountResponse{
    GRPCAccount account = 1;
}

message DeleteAccountRequest{
    int64 user_id = 1;
    int64 account_number = 2;
}

message DeleteAccountResponse{
    
}


service Users {
    rpc GetUsers(GetUsersRequest) returns (GetUsersResponse);
    rpc GetUser(GetUserRequest) returns (GetUserResponse);
    rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
    rpc DeleteUser(DeleteUserRequest) returns (DeleteUserResponse);
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse);
    rpc DeleteAccount(DeleteAccountRequest) returns (DeleteAccountResponse);
}